shrank iframe box down a bit and added more to the info text

--- a/index.html
+++ b/index.html
@@ -214,6 +214,15 @@
             <p>IMDB and Rotten Tomatoes have public ratings and critic ratings.</p>
             <p>Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.</p>
             <p>The pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </p>
+            <p>The bar colour represents how positive the combined average of both rating types were. The colours represent:</p>
+            <ul>
+            <li><span style="color:green">Green</span>: Well liked - The combined score is over 70</li>
+            <li><span style="color:orange">Orange</span>: Well, Meh - The combined score is between 60 and 70</li>
+            <li><span style="color:red">Red</span>: Well I wouldn't bother - The combined score is under 60</li>
+            </ul>
+            <p>
+            If you want to find some interesting films people have found in the past, check out the <a href="http://www.reddit.com/r/pretentiousometer/">SubReddit for Pretentious-O-Meter</a> and post your own with the Reddit share icon above.
+            </p>
             <p>Feedback is welcome to niallbeard [at] gmail.com. <a href="https://github.com/njall/pretentious-o-meter">Source code is free for all</a></p>
         </div>
 
