Tweaked the colour choices and added a legend

--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
                                 </table>
                             </span>
                         </tr>
+                        <div class="legend">
+                        	<img alt=" " class="squared" style="background-color: green; height:15px" /> Great Film
+                        	<img alt=" " class="squared" style="background-color: orange; height:15px" /> Alright Film
+                        	<img alt=" " class="squared" style="background-color: red; height:15px" /> Shit Film 
+                        </div>
                         <tr>
                             <hr>
                             <td>
@@ -216,9 +221,9 @@
             <p>The pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </p>
             <p>The bar colour represents how positive the combined average of both rating types were. The colours represent:</p>
             <ul>
-            <li><span style="color:green">Green</span>: Well liked - The combined score is over 70</li>
-            <li><span style="color:orange">Orange</span>: Well, Meh - The combined score is between 60 and 70</li>
-            <li><span style="color:red">Red</span>: Well I wouldn't bother - The combined score is under 60</li>
+            <li><span style="color:green">Green</span>: Well liked - The combined score is over 73</li>
+            <li><span style="color:orange">Orange</span>: Well, Meh - The combined score is between 61 and 73</li>
+            <li><span style="color:red">Red</span>: Well I wouldn't bother - The combined score is under 61</li>
             </ul>
             <p>
             If you want to find some interesting films people have found in the past, check out the <a href="http://www.reddit.com/r/pretentiousometer/">SubReddit for Pretentious-O-Meter</a> and post your own with the Reddit share icon above.
