Fixed compatability with firefox for film colour legends

--- a/index.html
+++ b/index.html
@@ -148,9 +148,10 @@
                             </span>
                         </tr>
                         <div class="legend">
-                        	<img alt=" " class="squared" style="background-color: green; height:15px" /> Great Film
-                        	<img alt=" " class="squared" style="background-color: orange; height:15px" /> Alright Film
-                        	<img alt=" " class="squared" style="background-color: red; height:15px" /> Shit Film 
+                        	<div class="legend-item" style="background-color: green;"> </div> Great Film
+                        	<div class="legend-item" style="background-color: orange;"> </div> Average Film
+                        	<div class="legend-item" style="background-color: red;">
+                        	</div> Rubbish Film 
                         </div>
                         <tr>
                             <hr>
