Respaced the sharing and permalink

--- a/index.html
+++ b/index.html
@@ -153,22 +153,9 @@
                         	<div class="legend-item" style="background-color: red;">
                         	</div> Rubbish Film 
                         </div>
-                        <tr>
-                            <hr>
-                            <td>
-                                <span class="h4">Permalink  <i id='link-icon' class="glyphicon glyphicon-link"></i></span><br>
-                                <span><a id='share-link' class="h4">http://pretentious-o-meter.co.uk</a></span>
-                            </td>
-                        </tr>
-                                <div class="h4" id='sharing-button-text' style="display:none">Share this films results:</div>
-                                <div class="sharing-button"></div>
-                                <div style="margin-left: 250px; margin-top: -20px" id="reddit-widget"></div>
-                         
-                            <hr>
                         </tr>
                     </table>
                 </div>
-
                 <span class="col-lg-4">
                     <div id='film-info' style="display:none; padding-right:5px">
                         <table>
@@ -194,6 +181,15 @@
                         </table>
                     </div>
                 </span>
+                <div class="h4 sharing-buttons" id='sharing-button-text'>
+                      <div class="sharing-button"></div>
+                      <div id="reddit-widget"></div>
+                      <br>
+                      <span class="permalink">
+                      <i id='link-icon' class="glyphicon glyphicon-link"></i>
+                      &nbsp<a id='share-link' class="h4">http://pretentious-o-meter.co.uk</a>
+                      </span>
+                </div>
             </div>
         </div>
 
