Added cc-by license

--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
         </div>
 
     </div>
-    <div class="text-center copyright-footer">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a></div>
+    <div class="text-center copyright-footer">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a><br>
+    <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+    </div>
 	<script type="text/javascript">
 		/* * * CONFIGURATION VARIABLES * * */
 		var disqus_shortname = 'pretentiousometer';
