--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
+	<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="index.css"/>
 
@@ -164,19 +166,22 @@
                                     <a class="h3 url" id="title"></a><span class="h4"> (<span id='year'></span>)</span>
                                 </span>
                                 <br><br>
-                                </tr>
-                                <tr>
+                            </tr>
+                            <tr>
                                 <td>
-                                    <img id='poster' style="max-height:275px;"/>
+                                    <img id='poster' style="max-height:250px;"/>
                                 </td>
                                 <td style="padding-left:20px">
                                     <h4><u>Critics</u></h4>
-                                    <b>IMDB Metascore:</b> <div id='meta'></div>
-                                    <b>RT Rating:</b> <div id='rt-critic-rating'></div>
+                                    <b>IMDB:</b> <div id='meta-original'></div><div id='meta-percent'></div>
+                                    <b>RT:</b> <div id='rt-critic-rating-original'></div><div id='rt-critic-rating-percent'></div>
                                     <h4><u>Public</u></h4>
-                                    <b>IMDB Rating:</b> <div id='imdb-score'></div>
-                                    <b>RT User Rating:</b> <div id='rt-rating'></div>
+                                    <b>IMDB:</b> <div id='imdb-score-original'></div><div id='imdb-score-percent'></div>
+                                    <b>RT:</b> <div id='rt-rating-original'></div><div id='rt-rating-percent'></div>
                                 </td>
+                            </tr>
+                            <tr>
+                            	<td></td><td><input type="checkbox" id="rating-type" checked></td>
                             </tr>
                         </table>
                     </div>
@@ -226,6 +231,8 @@
             If you want to find some interesting films people have found in the past, check out the <a href="http://www.reddit.com/r/pretentiousometer/">SubReddit for Pretentious-O-Meter</a> and post your own with the Reddit share icon above.
             </p>
             <p>Feedback is welcome to niallbeard [at] gmail.com. <a href="https://github.com/njall/pretentious-o-meter">Source code is free for all</a></p>
+        	<p>I'd also like to express heaps of gratitude to Brian Fritz who created and runs the <a href="http://omdbapi.com">OMDB API</a>. He has a donation page on the site if you're feeling generous.</p> 
+			<p> Please attribute me by name (Niall Beard) on any new instances of the website, or on any articles written about it.</p>
         </div>
 
     </div>
