Changed column ordering on ratings and switched two values round as were incorrect

--- a/index.html
+++ b/index.html
@@ -174,17 +174,17 @@
                                 <td>
                                 	<table class="table table-bordered table-hover results"> 
                                 	<thead> 
-                                		<td></td><th>Critic</th><th>Public</th>
+                                		<td></td><th>Public</th><th>Critic</th>
                                 	</thead>
                                 	<tr>
                                 		<th>IMDB</th>
+                                		<td><div id='imdb-score-original'></div><div id='imdb-score-percent'></div></td>
                                 		<td><div id='meta-original'></div><div id='meta-percent'></div></td>
-                                		<td><div id='rt-critic-rating-original'></div><div id='rt-critic-rating-percent'></div></td>
                                 	</tr>
                                 	<tr>
                                 		<th>RT</th>
-                                		<td><div id='imdb-score-original'></div><div id='imdb-score-percent'></div></td>
                                 		<td><div id='rt-rating-original'></div><div id='rt-rating-percent'></div></td>
+                                		<td><div id='rt-critic-rating-original'></div><div id='rt-critic-rating-percent'></div></td>
                                 	</tr>
                                 	</table>
                                 	<div class="toggle"><input type="checkbox" id="rating-type" checked></div>
