--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 	</head>
 
 	<body>
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  		var js, fjs = d.getElementsByTagName(s)[0];
+  		if (d.getElementById(id)) return;
+  		js = d.createElement(s); js.id = id;
+  		js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.3&appId=448155895273748";
+  		fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
 		<div class="container">
 			<div class="jumbotron">
 				<div class="row">
@@ -47,8 +55,9 @@
 									Pop in a film name or click an example to find out whether a film is pure cheese or sophisticated fromage.
 								</div>
 							</td>
-							<td>
+							<td style="max-width:150px; text-align:center">
 								<img src="pretentiouscat1.gif" style="max-height:180px"></div>
+								<div class="fb-like" data-href="https://www.facebook.com/pretentiousometer" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
 							</td>
 						</tr>
 					</table>
