--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 	        <div class="jumbotron jumbo-tiny-text">
 	            <h2>What Am I Seeing Here?</h2>
 	            <p>IMDB and Rotten Tomatoes have public ratings and critic ratings.</p>
-	            <p>Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.</p>
+	            <p>Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or it is too formulaic and derivative for critics to give it a decent score.</p>
 	            <p>The pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </p>
 	            <p>The bar colour represents how positive the combined average of both rating types were. The colours represent:</p>
 	            <ul>
