Typo and welcoming of contributions

--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
 	            <li><span style="color:red">Red</span>: Well I wouldn't bother - The combined score is under 61</li>
 	            </ul>
 	            <p>
-	            If you want to find some interesting films people have found in the past, check out the <a href="http://www.reddit.com/r/pretentiousometer/">SubReddit for Pretentious-O-Meter</a> and post your own with the Reddit share icon above.
+	            If you want to find some interesting films people have found in the past, check out the <a href="http://www.reddit.com/r/pretentiousometer/">Subreddit for Pretentious-O-Meter</a> and post your own with the Reddit share icon above.
 	            </p>
-	            <p>Feedback is welcome to niallbeard [at] gmail.com. <a href="https://github.com/njall/pretentious-o-meter">Source code is free for all</a></p>
+	            <p>Feedback is welcome to niallbeard [at] gmail.com. <a href="https://github.com/njall/pretentious-o-meter">Source code is free for all</a> and code contributions are warmly welcomed.</p>
 	        	<p>I'd also like to express heaps of gratitude to Brian Fritz who created and runs the <a href="http://omdbapi.com">OMDB API</a>. He has a donation page on the site if you're feeling generous.</p> 
 				<p> Please attribute me by name (Niall Beard) on any new instances of the website, or on any articles written about it.</p>
 	        </div>
