Fresh examples, hot off the press

--- a/index.html
+++ b/index.html
@@ -63,25 +63,23 @@
 					</table>
 
 	                <div class="row examples">
-	                    <button type="button" class="btn btn-default" id="ex1" value='Dumb & Dumber'>Dumb & Dumber</button>
-	                    <button type="button" class="btn btn-default" id="ex2" value='Birdman: Or'>Birdman</button>
-	                    <button type="button" class="btn btn-default" id="ex3" value='Starship Troopers'>Starship Troopers</button>
-	                    <button type="button" class="btn btn-default" id="ex4" value='Argo'>Argo</button>
-	                    <button type="button" class="btn btn-default" id="ex5" value='Mrs. doubtfire'>Mrs. doubtfire</button>
-	                    <button type="button" class="btn btn-default" id="ex6" value='The Artist'>The Artist</button>
-	                    <button type="button" class="btn btn-default" id="ex7" value='The Avengers'>The Avengers</button>
-	                    <button type="button" class="btn btn-default" id="ex8" value='Batman Forever'>Batman Forever</button>
-	                    <button type="button" class="btn btn-default" id="ex9" value='Free Willy'>Free Willy</button>
-	                    <button type="button" class="btn btn-default" id="ex10" value='Hobbit'>The Hobbit</button>
-	                    <button type="button" class="btn btn-default" id="ex11" value='Big Momma'>Big Momma's House</button>
-	                    <button type="button" class="btn btn-default" id="ex12" value='Sideways'>Sideways</button>
+	                    <button type="button" class="btn btn-default" id="ex1" value='Shutter Island'>Shutter Island</button>
+	                    <button type="button" class="btn btn-default" id="ex3" value='Frances Ha'>Frances Ha</button>
+	                    <button type="button" class="btn btn-default" id="ex4" value='Hugo'>Hugo</button>
+	                    <button type="button" class="btn btn-default" id="ex2" value='Gattaca'>Gattaca</button>
+	                    <button type="button" class="btn btn-default" id="ex5" value="The King's Speech">The Kings Speech</button>
+	                    <button type="button" class="btn btn-default" id="ex6" value='spring breakers'>Spring Breakers</button>
+	                    <button type="button" class="btn btn-default" id="ex7" value='Ed Wood'>Ed Wood</button>
+	                    <button type="button" class="btn btn-default" id="ex8" value='Transformers: Revenge of the fallen'>Transformers: RotF</button>
+	                    <button type="button" class="btn btn-default" id="ex9" value='The Lord of the Rings: The Return of the King'>LOTR: Return of the King</button>
+	                    <button type="button" class="btn btn-default" id="ex10" value='Tremors'>Tremors</button>
+	                    <button type="button" class="btn btn-default" id="ex15" value='Erin Brockovich'>Erin Brockovich</button>
+	                    <button type="button" class="btn btn-default" id="ex11" value='Wolf of Wall Street'>Wolf of Wall Street</button>
+	                    <button type="button" class="btn btn-default" id="ex12" value='The Matrix Revolutions'>The Matrix Revolutions</button>
 	                    <button type="button" class="btn btn-default" id="ex13" value='lost in translation'>Lost in Translation</button>
-	                    <button type="button" class="btn btn-default" id="ex14" value='princess mononoke'>Princess Mononoke</button>
-	                    <button type="button" class="btn btn-default" id="ex15" value='Battle Royale'>Battle Royale</button>
-	                    <button type="button" class="btn btn-default" id="ex16" value='The Matrix'>The Matrix</button>
-	                    <button type="button" class="btn btn-default" id="ex17" value='machete kills'>Machete Kills</button>
-	                    <button type="button" class="btn btn-default" id="ex18" value='12 angry men'>12 Angry Men</button>
-	                    <button type="button" class="btn btn-default" id="ex19" value='amadeus'>Amadeus</button>
+	                    <button type="button" class="btn btn-default" id="ex14" value='talented mr ripley'>Talented Mr Ripley</button>
+	                    <button type="button" class="btn btn-default" id="ex16" value="My Sister's Keeper">My Sister's Keeper</button>
+	                    <button type="button" class="btn btn-default" id="ex17" value="Tron Legacy">Tron</button>
 	                </div><!-- /.row -->
 
 	                <div class="row search-box">
@@ -244,9 +242,13 @@
 	            <li><span style="color:orange">Orange</span>: Well, Meh - The combined score is between 61 and 73</li>
 	            <li><span style="color:red">Red</span>: Well I wouldn't bother - The combined score is under 61</li>
 	            </ul>
+	            <p> One thing you might find is old films come up as very pretentious. The theory is because critics like reviewing already
+	            well-established classics; so their rating tends to be a lot higher than audiences. Critics factor in things like how innovative it was for it's time, it's impact on cinema, and just plain nostalgic value.
+	            I did intend to curb older film's pretentious rating a bit, but I decided against it as they're still overrated in terms of real entertainment value. <a href="https://twitter.com/niall_beard">Tweet me</a> or post on the <a href="https://www.facebook.com/pretentiousometer">Pretentious-O-Meter Facebook page</a> if you think I should. </p>
 	            <p>
 	            If you want to find some interesting films people have found in the past, check out the <a href="http://www.reddit.com/r/pretentiousometer/">Subreddit for Pretentious-O-Meter</a> and post your own with the Reddit share icon above.
 	            </p>
+
 	            <p>Feedback is welcome to niallbeard [at] gmail.com. <a href="https://github.com/njall/pretentious-o-meter">Source code is free for all</a> and code contributions are warmly welcomed.</p>
 	        	<p>I'd also like to express heaps of gratitude to Brian Fritz who created and runs the <a href="http://omdbapi.com">OMDB API</a>. He has a donation page on the site if you're feeling generous.</p> 
 				<p> Please attribute me by name (Niall Beard) on any new instances of the website, or on any articles written about it.</p>
