Added styling and removed console.logs and permalink

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.css"/>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
 		<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
@@ -205,11 +206,11 @@
 	                <div class="h4 sharing-buttons" id='sharing-button-text'>
 	                      <div class="sharing-button"></div>
 	                      <div id="reddit-widget"></div>
-	                      <br>
+	                      <!-- <br>
 	                      <span class="permalink">
 	                      <i id='link-icon' class="glyphicon glyphicon-link"></i>
 	                      &nbsp<a id='share-link' class="h4">http://pretentious-o-meter.co.uk</a>
-	                      </span>
+	                      </span> -->
 	                </div>
 	            </div>
 	        </div>
