Added new amazon ad and css for it

--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
   		fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 		<div class="container">
-        <div class="row">
-            <div class="col-lg-3"></div>
-	        <div class="col-lg-6">
+        <div class="amazon-ad">
                 <iframe src="http://rcm-eu.amazon-adsystem.com/e/cm?t=pretenometer-21&o=2&p=48&l=ur1&category=piv&banner=1Y2RWQMYHB249C1M5FG2&f=ifr" width="728" height="90" scrolling="no" border="0" marginwidth="0" margin-left="40px"   style="border:none;" frameborder="0"></iframe>
-            </div> 
         </div>
 			<div class="jumbotron">
 				<div class="row">
@@ -220,6 +217,10 @@
 	                </div>
 	            </div>
 	        </div>
+
+	     <div class="amazon-ad">
+                <iframe src="http://rcm-eu.amazon-adsystem.com/e/cm?t=pretenometer-21&o=2&p=48&l=ur1&category=piv&banner=1Y2RWQMYHB249C1M5FG2&f=ifr" width="728" height="90" scrolling="no" border="0" marginwidth="0" margin-left="40px"   style="border:none;" frameborder="0"></iframe>
+        </div>
 
 	        <div class="jumbotron jumbo-tiny-text" id='comments'>
 	            <div class="h2">Analysis of <span class="comment-title"> this film</span></div>
