Added iTunes film

--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
   		fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 		<div class="container">
-        <div class="amazon-ad">
-                <iframe src="http://rcm-eu.amazon-adsystem.com/e/cm?t=pretenometer-21&o=2&p=48&l=ur1&category=piv&banner=1Y2RWQMYHB249C1M5FG2&f=ifr" width="728" height="90" scrolling="no" border="0" marginwidth="0" margin-left="40px"   style="border:none;" frameborder="0"></iframe>
-        </div>
 			<div class="jumbotron">
 				<div class="row">
 					<table>
@@ -111,6 +108,8 @@
 	                    </div>
 	                </div>
 	            </div>
+	        </div>
+			<div id="itunes-banner" class="amazon-ad">
 	        </div>
 
 	        <div class="jumbotron jumbo-results">
@@ -181,7 +180,7 @@
 	                            </tr>
 	                            <tr>
 	                                <td>
-	                                    <img id='poster' style="max-height:220px;"/>
+	                                    <img id='poster' style="max-height:220px; max-width: 166px"/>
 	                                </td>
 	                                <td>
 	                                	<table class="table table-bordered table-hover results"> 
@@ -217,11 +216,6 @@
 	                </div>
 	            </div>
 	        </div>
-
-	     <div class="amazon-ad">
-                <iframe src="http://rcm-eu.amazon-adsystem.com/e/cm?t=pretenometer-21&o=2&p=48&l=ur1&category=piv&banner=1Y2RWQMYHB249C1M5FG2&f=ifr" width="728" height="90" scrolling="no" border="0" marginwidth="0" margin-left="40px"   style="border:none;" frameborder="0"></iframe>
-        </div>
-
 	        <div class="jumbotron jumbo-tiny-text" id='comments'>
 	            <div class="h2">Analysis of <span class="comment-title"> this film</span></div>
 	            <p>Share your thoughts on what caused <span class="comment-title">this film</span> to have a divergence between critics and audiences.</p>
@@ -239,6 +233,10 @@
 	            </script>
 	            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 	        </div>
+
+	    <div class="amazon-ad">
+                <iframe src="http://rcm-eu.amazon-adsystem.com/e/cm?t=pretenometer-21&o=2&p=48&l=ur1&category=piv&banner=1Y2RWQMYHB249C1M5FG2&f=ifr" width="728" height="90" scrolling="no" border="0" marginwidth="0" margin-left="40px"   style="border:none;" frameborder="0"></iframe>
+        </div>
 
 	        <div class="jumbotron jumbo-tiny-text">
 	            <h2>What Am I Seeing Here?</h2>
