--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
 	                </div>
 	            </div>
 	        </div>
-			<div id="itunes-banner" class="amazon-ad">
-	        </div>
-
+			<div id="itunes-banner" class="advert"></div>
 	        <div class="jumbotron jumbo-results">
 	            <div class="row">
 	                <div class="col-lg-8">
@@ -205,7 +203,8 @@
 	                        </table>
 	                    </div>
 	                </span>
-	                <div class="h4 sharing-buttons" id='sharing-button-text'>
+	                <div class="col-lg-4"></div>
+	                <div class="h4 sharing-buttons col-lg-4" id='sharing-button-text'>
 	                      <div class="sharing-button"></div>
 	                      <div id="reddit-widget"></div>
 	                      <!-- <br>
@@ -216,6 +215,7 @@
 	                </div>
 	            </div>
 	        </div>
+	        <div id="amazon-banner" class="advert"></div>
 	        <div class="jumbotron jumbo-tiny-text" id='comments'>
 	            <div class="h2">Analysis of <span class="comment-title"> this film</span></div>
 	            <p>Share your thoughts on what caused <span class="comment-title">this film</span> to have a divergence between critics and audiences.</p>
@@ -234,7 +234,7 @@
 	            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 	        </div>
 
-	    <div class="amazon-ad">
+	    <div class="advert">
                 <iframe src="http://rcm-eu.amazon-adsystem.com/e/cm?t=pretenometer-21&o=2&p=48&l=ur1&category=piv&banner=1Y2RWQMYHB249C1M5FG2&f=ifr" width="728" height="90" scrolling="no" border="0" marginwidth="0" margin-left="40px"   style="border:none;" frameborder="0"></iframe>
         </div>
 
