Link to t-shirt

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
 
 	            <p>Feedback is welcome to niallbeard [at] gmail.com. <a href="https://github.com/njall/pretentious-o-meter">Source code is free for all</a> and code contributions are warmly welcomed.</p>
 	        	<p>I'd also like to express heaps of gratitude to Brian Fritz who created and runs the <a href="http://omdbapi.com">OMDB API</a>. He has a donation page on the site if you're feeling generous.</p> 
+	        	<p> You can help support the Pretentious-O-Meter by buying the <a href=" http://www.spreadshirt.co.uk/-C59/product/129258946/view/1/sb/l">Spiffy Pretentious Cat T-Shirt</a></p>
 				<p> Please attribute me by name (Niall Beard) on any new instances of the website, or on any articles written about it.</p>
 	        </div>
 
