Adverts based on country - US/UK only

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 	        </div>
 
 	    </div>
+	    <input type="hidden" id='country_code'/>
 	    <div class="text-center copyright-footer">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a><br>
 	    <a class="twitter-follow-button"
 			  href="https://twitter.com/niall_beard"
