--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 	            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 	        </div>
 
-	    <div class="advert">
+	    <div class="advert" id="prime-banner">
                 <iframe src="http://rcm-eu.amazon-adsystem.com/e/cm?t=pretenometer-21&o=2&p=48&l=ur1&category=piv&banner=1Y2RWQMYHB249C1M5FG2&f=ifr" width="728" height="90" scrolling="no" border="0" marginwidth="0" margin-left="40px"   style="border:none;" frameborder="0"></iframe>
         </div>
 
@@ -263,7 +263,7 @@
 	        </div>
 
 	    </div>
-	    <input type="hidden" id='country_code'/>
+	    <input type="hidden" id='country_code'></input>
 	    <div class="text-center copyright-footer">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a><br>
 	    <a class="twitter-follow-button"
 			  href="https://twitter.com/niall_beard"
