--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 	                <div class="row search-options">
 	                    Use:
 	                    <div class="btn-group" data-toggle="buttons">
-	                        <label class="btn btn-default">
+	                        <label id='imdblabel' class="btn btn-default">
 	                            <input type="checkbox" id='imdb' autocomplete="off">IMDB
 	                        </label>
-	                        <label class="btn btn-default active">
+	                        <label id='rtlabel' class="btn btn-default active">
 	                            <input type="checkbox" id='rt' autocomplete="off" checked>RottenTomatoes
 	                        </label>
 	                    </div>
