Pretentious Cat T-Shirt advert

--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
                 <iframe src="http://rcm-eu.amazon-adsystem.com/e/cm?t=pretenometer-21&o=2&p=48&l=ur1&category=piv&banner=1Y2RWQMYHB249C1M5FG2&f=ifr" width="728" height="90" scrolling="no" border="0" marginwidth="0" margin-left="40px"   style="border:none;" frameborder="0"></iframe>
         </div>
 
-	        <div class="jumbotron jumbo-tiny-text">
+        <div class="row">
+	        <div class="jumbotron jumbo-tiny-text col-lg-6">
 	            <h2>What Am I Seeing Here?</h2>
 	            <p>IMDB and Rotten Tomatoes have public ratings and critic ratings.</p>
 	            <p>Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or it is too formulaic and derivative for critics to give it a decent score.</p>
@@ -261,7 +262,16 @@
 	        	<p> You can help support the Pretentious-O-Meter by buying the <a href=" http://www.spreadshirt.co.uk/-C59/product/129258946/view/1/sb/l">Spiffy Pretentious Cat T-Shirt</a></p>
 				<p> Please attribute me by name (Niall Beard) on any new instances of the website, or on any articles written about it.</p>
 	        </div>
-
+	        <div class="jumbotron jumbo-tiny-text col-lg-6" style="left: 20px">
+	        	<h2>Help Support Us</h2>
+	        	<p> You can help support the Pretentious-O-Meter by buying the spiffy <a href="http://www.spreadshirt.co.uk/-C59/product/129258946/view/1/sb/l">Pretentious Cat T-shirt</a> designed by <a href="http://laurenbeard.co.uk">Lauren Beard</a>. You can customize the T-shirt yourself in any colour, style, size and fabric you like.</p>
+	        	<p> 50% of all T-Shirt proceeds will help to put clothes on the backs of Manchester's homeless by being donated to <a href="http://www.mustardtree.org.uk/how-can-i-help/donate-money/">The Mustard Tree</a>.</p>
+	        	<a href="http://www.spreadshirt.co.uk/-C59/product/129258946/view/1/sb/l">
+	        		<img src="pretentious-cat-tee.png" />
+	        	</a>
+	        	<p class="text-center"><a href="http://www.spreadshirt.co.uk/-C59/product/129258946/view/1/sb/l"> Buy the Tee </a></p>
+	        	</div>
+	        </div>
 	    </div>
 	    <input type="hidden" id='country_code'></input>
 	    <div class="text-center copyright-footer">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a><br>
