Autofocus on txt input

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	                    <div class="col-lg-3"></div>
 	                    <div class="col-lg-6">
 	                        <div class="input-group">
-	                            <input type="text" class="form-control text-center" placeholder="Film Name..." id="name" tabindex=1>
+	                            <input type="text" class="form-control text-center" placeholder="Film Name..." id="name" autofocus tabindex=1>
 	                            <span class="input-group-btn">
 	                                <button class="btn btn-default" type="button" id="submit">Go</button>
 	                            </span>
