Added new examples

--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
 					</table>
 
 	                <div class="row examples">
-	                    <button type="button" class="btn btn-default" id="ex1" value='Shutter Island'>Shutter Island</button>
-	                    <button type="button" class="btn btn-default" id="ex3" value='Frances Ha'>Frances Ha</button>
-	                    <button type="button" class="btn btn-default" id="ex4" value='Hugo'>Hugo</button>
-	                    <button type="button" class="btn btn-default" id="ex2" value='Gattaca'>Gattaca</button>
-	                    <button type="button" class="btn btn-default" id="ex5" value="The King's Speech">The Kings Speech</button>
-	                    <button type="button" class="btn btn-default" id="ex6" value='spring breakers'>Spring Breakers</button>
-	                    <button type="button" class="btn btn-default" id="ex7" value='Ed Wood'>Ed Wood</button>
-	                    <button type="button" class="btn btn-default" id="ex8" value='Transformers: Revenge of the fallen'>Transformers: RotF</button>
-	                    <button type="button" class="btn btn-default" id="ex9" value='The Lord of the Rings: The Return of the King'>LOTR: Return of the King</button>
-	                    <button type="button" class="btn btn-default" id="ex10" value='Tremors'>Tremors</button>
-	                    <button type="button" class="btn btn-default" id="ex15" value='Erin Brockovich'>Erin Brockovich</button>
-	                    <button type="button" class="btn btn-default" id="ex11" value='Wolf of Wall Street'>Wolf of Wall Street</button>
-	                    <button type="button" class="btn btn-default" id="ex12" value='The Matrix Revolutions'>The Matrix Revolutions</button>
-	                    <button type="button" class="btn btn-default" id="ex13" value='lost in translation'>Lost in Translation</button>
-	                    <button type="button" class="btn btn-default" id="ex14" value='talented mr ripley'>Talented Mr Ripley</button>
-	                    <button type="button" class="btn btn-default" id="ex16" value="My Sister's Keeper">My Sister's Keeper</button>
-	                    <button type="button" class="btn btn-default" id="ex17" value="Tron Legacy">Tron</button>
+	                    <button type="button" class="btn btn-default" id="ex1" value='Gummo'>Gummo</button>
+	                    <button type="button" class="btn btn-default" id="ex3" value='Annie Hall'>Annie Hall</button>
+	                    <button type="button" class="btn btn-default" id="ex4" value='Saw'>Saw</button>
+	                    <button type="button" class="btn btn-default" id="ex2" value='Rubber'>Rubber</button>
+	                    <button type="button" class="btn btn-default" id="ex5" value="Deconstructing Harry">Desconstructing Harry</button>
+	                    <button type="button" class="btn btn-default" id="ex6" value='The Lego Movie'>The Lego Movie</button>
+	                    <button type="button" class="btn btn-default" id="ex7" value='Gangs of New York'>Gangs of New York</button>
+	                    <button type="button" class="btn btn-default" id="ex8" value='Funny Games'>Funny Games</button>
+	                    <button type="button" class="btn btn-default" id="ex9" value='Rent'>Rent</button>
+	                    <button type="button" class="btn btn-default" id="ex10" value='Night Moves'>Night Moves</button>
+	                    <button type="button" class="btn btn-default" id="ex15" value='Bellflower'>Bellflower</button>
+	                    <button type="button" class="btn btn-default" id="ex11" value='Up in the Air'>Up in the Air</button>
+	                    <button type="button" class="btn btn-default" id="ex12" value='The Firm'>The Firm</button>
+	                    <button type="button" class="btn btn-default" id="ex13" value='The Lord of the Rings: The Two Towers'>The Lord of the Rings: The Two Towers</button>
+	                    <button type="button" class="btn btn-default" id="ex14" value='Guardians of the Galaxy'>Guardians of the Galaxy</button>
+	                    <button type="button" class="btn btn-default" id="ex16" value="Being John Malkovich">Being John Malkovich</button>
+	                    <button type="button" class="btn btn-default" id="ex17" value="Eternal Sunshine of the Spotless Mind">Eternal Sunshine</button>
 	                </div><!-- /.row -->
 
 	                <div class="row search-box">
